--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -52,40 +52,59 @@
                 android:layout_marginLeft="20dp"/>
 
             <com.google.android.material.textfield.TextInputLayout
+
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="5dp"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                app:endIconMode="clear_text">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/emailText"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/emailText"/>
+                    android:layout_height="wrap_content"
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Password"
+                android:text="@string/password"
                 android:layout_marginTop="30dp"
                 android:layout_marginLeft="20dp"/>
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:layout_marginTop="5dp"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal"
+                app:endIconMode="password_toggle">
 
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/passwordText"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:inputType="textPassword"
-                    android:id="@+id/passwordText"/>
+
+                    />
 
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/signinProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:indeterminate="true"
+            android:visibility="gone"
+            />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/signinBtn"
