--- a/app/src/main/res/layout/country_list.xml
+++ b/app/src/main/res/layout/country_list.xml
@@ -37,7 +37,7 @@
 
 
     <TextView
-        android:id="@+id/numberLeagueId"
+        android:id="@+id/totalLeague"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="240dp"
